// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/sidebar/sidebar_category should match snapshot 1`] = `
<div>
  <div
    data-rfd-droppable-context-id="_r_0_"
    data-rfd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section"
      data-rfd-draggable-context-id="_r_0_"
      data-rfd-draggable-id="category1"
    >
      <div
        class=""
        data-rfd-droppable-context-id="_r_0_"
        data-rfd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="true"
            aria-label="custom_category_1"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down"
            />
            <div
              aria-describedby="rfd-hidden-text-_r_0_-hidden-text-_r_1_"
              class="SidebarChannelGroupHeader_text"
              data-rfd-drag-handle-context-id="_r_0_"
              data-rfd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              custom_category_1
            </div>
          </button>
          <div
            id="mock-category-menu"
          />
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          >
            <li
              id="mock-sidebar-channel"
            />
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when collapsed 1`] = `
<div>
  <div
    data-rfd-droppable-context-id="_r_b_"
    data-rfd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section isCollapsed"
      data-rfd-draggable-context-id="_r_b_"
      data-rfd-draggable-id="category1"
    >
      <div
        class=""
        data-rfd-droppable-context-id="_r_b_"
        data-rfd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="false"
            aria-label="custom_category_1"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down icon-rotate-minus-90"
            />
            <div
              aria-describedby="rfd-hidden-text-_r_b_-hidden-text-_r_c_"
              class="SidebarChannelGroupHeader_text"
              data-rfd-drag-handle-context-id="_r_b_"
              data-rfd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              custom_category_1
            </div>
          </button>
          <div
            id="mock-category-menu"
          />
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          >
            <li
              id="mock-sidebar-channel"
            />
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when isNewCategory 1`] = `
<div>
  <div
    data-rfd-droppable-context-id="_r_5_"
    data-rfd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section"
      data-rfd-draggable-context-id="_r_5_"
      data-rfd-draggable-id="category1"
    >
      <div
        class=""
        data-rfd-droppable-context-id="_r_5_"
        data-rfd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="true"
            aria-label="custom_category_1"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down"
            />
            <div
              aria-describedby="rfd-hidden-text-_r_5_-hidden-text-_r_6_"
              class="SidebarChannelGroupHeader_text"
              data-rfd-drag-handle-context-id="_r_5_"
              data-rfd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              custom_category_1
            </div>
          </button>
          <div
            class="SidebarCategory_newLabel"
          >
            new
          </div>
          <div
            id="mock-category-menu"
          />
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          >
            <li
              class="SidebarChannel noFloat newChannelSpacer"
              data-rfd-draggable-context-id="_r_5_"
              data-rfd-draggable-id="NEW_CHANNEL_SPACER__category1"
              draggable="false"
              tabindex="-1"
            />
            <div
              class="SidebarCategory_newDropBox"
            >
              <div
                class="SidebarCategory_newDropBox-content"
              >
                <i
                  class="icon-hand-right"
                />
                <span
                  class="SidebarCategory_newDropBox-label"
                >
                  Drag channels here...
                </span>
              </div>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when sorting is set to by recency 1`] = `
<div>
  <div
    data-rfd-droppable-context-id="_r_q_"
    data-rfd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section"
      data-rfd-draggable-context-id="_r_q_"
      data-rfd-draggable-id="category1"
    >
      <div
        class=""
        data-rfd-droppable-context-id="_r_q_"
        data-rfd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="true"
            aria-label="DIRECT MESSAGES"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down"
            />
            <div
              aria-describedby="rfd-hidden-text-_r_q_-hidden-text-_r_r_"
              class="SidebarChannelGroupHeader_text"
              data-rfd-drag-handle-context-id="_r_q_"
              data-rfd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              DIRECT MESSAGES
            </div>
          </button>
          <div
            id="mock-sorting-menu"
          />
          <button
            aria-label="Write a direct message"
            class="SidebarChannelGroupHeader_addButton"
            id="newDirectMessageButton"
          >
            <i
              class="icon-plus"
            />
          </button>
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          >
            <li
              id="mock-sidebar-channel"
            />
          </ul>
        </div>
      </div>
      <div
        id="mock-invite-members-button"
      />
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when the category is DM and there are no DMs to display 1`] = `
<div>
  <div
    data-rfd-droppable-context-id="_r_g_"
    data-rfd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section"
      data-rfd-draggable-context-id="_r_g_"
      data-rfd-draggable-id="category1"
    >
      <div
        class=""
        data-rfd-droppable-context-id="_r_g_"
        data-rfd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="true"
            aria-label="DIRECT MESSAGES"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down hide-arrow"
            />
            <div
              aria-describedby="rfd-hidden-text-_r_g_-hidden-text-_r_h_"
              class="SidebarChannelGroupHeader_text"
              data-rfd-drag-handle-context-id="_r_g_"
              data-rfd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              DIRECT MESSAGES
            </div>
          </button>
          <div
            id="mock-sorting-menu"
          />
          <button
            aria-label="Write a direct message"
            class="SidebarChannelGroupHeader_addButton"
            id="newDirectMessageButton"
          >
            <i
              class="icon-plus"
            />
          </button>
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          />
        </div>
      </div>
      <div
        id="mock-invite-members-button"
      />
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when there are no channels to display 1`] = `
<div>
  <div
    data-rfd-droppable-context-id="_r_n_"
    data-rfd-droppable-id="sidebar-categories"
  />
</div>
`;
